--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,8 @@
  */
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "reset", "header", "post", "page", "syntax-highlighting", "index", "demo", "footer", "scrollbar", "backToTop";
+
+
 // 两个人在列车上相遇
 // 一段旅程充满了诗意
 // 你突然说你要下车
@@ -55,3 +57,28 @@
 // 就再次回到这列车上
 // 我们谈天说地
 // 把酒言欢，赠予你新路途纹银
+
+
+
+// 没有演不完的戏，
+// 没有走不出的局。
+
+// 你来过一阵子，我念你一辈子，
+// 只是思念的早已不是那个具体的你。
+
+// 缘起话昔别，深浅亦是情。
+// 我曾爱你如命，我愿忘你于雨。
+
+
+// 有一种孤独是与生俱来的，
+// 是一种排斥，
+// 无论对人，
+//还是对事。
+
+// 而大多数的人却知道这类人不合群。
+// 你不懂我，我不怪你。
+
+
+
+
+
