--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -101,7 +101,7 @@
                 background-color: #dbdfee;
                 .badge {
                   background-color: #dbdfee;
-                  transform: scale(1.2) rotate(360deg);
+                  //transform: scale(1.2) rotate(360deg);
                 }
               }
               .name {
@@ -113,9 +113,9 @@
                 // width: 20px;
                 float: right;
                 text-align: center;
-                margin-right: 15px;
-                margin-top: 3px;
-                padding: 0 10px;
+                margin-right: 10px;
+                margin-top: 2px;
+                padding: 0 8px;
                 font-size: 12px;
                 color: #fff;
                 background-color: #bbb;
